argocd-rollout-example/test-deifops.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
spec:
  replicas: 2
  strategy:
    blueGreen:
      activeService: hello-world-active
      previewService: hello-world-preview
    autoPromotionEnabled: false
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-active
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-preview
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 8088
    targetPort: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-ingress
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/group.name: deifops
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
#     external-dns.alpha.kubernetes.io/hostname: test.deifops.click
# spec:
#   ingressClassName: alb
#   rules:
#   - host: test.deifops.click
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hello-world-svc
#             port:
#               number: 80
